@@ -1,4 +1,9 @@
 release 1.0.1 (2008-11/12)
+- Enable the injecton of of FormDataContentDispostion when using @FormParam
+  in conjuction with "multipart/form-data". This enables access to parameters
+  on the "form-data" content disposition header such as the value of the
+  "filename" parameter.
+@FormParam("name") FormDataContentDispostion when
 - The following classes have been modified to include the creation of
   a container with an instance of an IoCContainerProviderFactory:
   - com.sun.jersey.api.container.ContainerFactory
